cmake_minimum_required(VERSION 3.5)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories(${PROJECT_SOURCE_DIR}/include) 
include_directories( ${OpenCV_INCLUDE_DIRS} )
file(GLOB_RECURSE SRC_FILES "src/*.cpp")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_executable(DisplayImage ${SRC_FILES})
target_link_libraries(DisplayImage ${OpenCV_LIBS})